# ALICE-collisions

./: CMakeLists.txt  Readme  detector.dae  main.cpp  track.json
Documents/: bibliography.bib  thesis.tex
Documents/preamble/: begining.tex  preamble.tex
Glitter/Glitter/Headers/: glitter.hpp
Headers/: Camera.h  Mesh.h  Model.h  Shader.h  Track.h
Shaders/: fragment.frag  geometry.geom  materials.frag  materials.vert  tracks.frag  tracks.geom  tracks.vert  vertex.vert
